--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="Resources/commons-io-2.18.0.jar"/>
 	<classpathentry kind="lib" path="Resources/selenium-server-4.30.0.jar"/>
+	<classpathentry kind="lib" path="Resources/testng-7.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
